<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/frag_filter_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FilterFragment"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:layout_alignParentTop="true">

        <ImageButton
            android:id="@+id/reset_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_reset_foreground" />

        <TextView
            android:id="@+id/home_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Filter"
            android:textSize="23sp"
            android:gravity="center"
            android:layout_gravity="center"/>

        <ImageButton
            android:id="@+id/bottomSheetCloseButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:onClick="onClose"
            android:src="@drawable/ic_close_foreground"/>

    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#7f7f7f"
        android:layout_marginTop="5dp"
        android:layout_marginStart="-16dp"
        android:layout_marginEnd="-16dp"/>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_below="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/applyfilter_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Section: Language -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Language"
                android:textSize="17sp"
                android:paddingBottom="10dp"
                android:textStyle="bold"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/language_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:selectionRequired="false"
                app:singleSelection="false">

                <com.google.android.material.chip.Chip
                    android:id="@+id/l_Korean"
                    style="@style/CustomWidget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Korean"
                    tools:checked="true"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/l_English"
                    style="@style/CustomWidget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="English"
                    tools:checked="false"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/l_Japanese"
                    style="@style/CustomWidget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Japanese"
                    tools:checked="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/l_Chinese"
                    style="@style/CustomWidget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Chinese"
                    tools:checked="true"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/l_Thai"
                    style="@style/CustomWidget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Thai"
                    tools:checked="true"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/l_Russian"
                    style="@style/CustomWidget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Russian"
                    tools:checked="true"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/l_Vietnamese"
                    style="@style/CustomWidget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Vietnamese"
                    tools:checked="true"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/l_Indonesian"
                    style="@style/CustomWidget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Indonesian"
                    tools:checked="true"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/l_French"
                    style="@style/CustomWidget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="French"
                    tools:checked="true"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/l_German"
                    style="@style/CustomWidget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="German"
                    tools:checked="true"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/l_Spanish"
                    style="@style/CustomWidget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Spanish"
                    tools:checked="true"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/l_Others"
                    style="@style/CustomWidget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Others"
                    tools:checked="true"/>

            </com.google.android.material.chip.ChipGroup>

            <!-- Section: Event Types -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Event Type"
                android:textSize="17sp"
                android:paddingVertical="10dp"
                android:textStyle="bold"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/event_type_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:selectionRequired="false"
                app:singleSelection="false">

                <com.google.android.material.chip.Chip
                    android:id="@+id/et_leisure"
                    style="@style/CustomWidget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Leisure"
                    tools:checked="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/et_sports"
                    style="@style/CustomWidget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sports"
                    tools:checked="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/et_workshops"
                    style="@style/CustomWidget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Workshops"
                    tools:checked="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/et_parties"
                    style="@style/CustomWidget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Parties"
                    tools:checked="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/et_culture"
                    style="@style/CustomWidget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Culture"
                    tools:checked="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/et_others"
                    style="@style/CustomWidget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Others"
                    tools:checked="true" />

            </com.google.android.material.chip.ChipGroup>

            <!-- Section: Date -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Date"
                android:textSize="17sp"
                android:paddingVertical="10dp"
                android:textStyle="bold"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/date_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:selectionRequired="false"
                app:singleSelection="false">

                <com.google.android.material.chip.Chip
                    android:id="@+id/d_thisweek"
                    style="@style/CustomWidget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="This week"
                    tools:checked="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/d_nextweek"
                    style="@style/CustomWidget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Next week"
                    tools:checked="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/d_evenfurther"
                    style="@style/CustomWidget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Even further"
                    tools:checked="true" />

            </com.google.android.material.chip.ChipGroup>

            <!-- Section: Time -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Time"
                android:textSize="17sp"
                android:paddingVertical="10dp"
                android:textStyle="bold"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/time_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:selectionRequired="false"
                app:singleSelection="false">

                <com.google.android.material.chip.Chip
                    android:id="@+id/t_5_12"
                    style="@style/CustomWidget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Morning"
                    tools:checked="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/t_12_6"
                    style="@style/CustomWidget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Afternoon"
                    tools:checked="true" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/t_6_5"
                    style="@style/CustomWidget.Material3.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Night"
                    tools:checked="true" />

            </com.google.android.material.chip.ChipGroup>


            <!-- Section: Price -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Price"
                android:textSize="17sp"
                android:paddingVertical="10dp"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/freeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="Free event only   "
                android:textSize="17sp"/>

            <!-- Section: Location -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Location"
                android:textSize="17sp"
                android:paddingVertical="10dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/location_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter location"
                android:inputType="text"
                android:layout_marginBottom="16dp"/>

        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/applyfilter_button"
        style="@style/PositiveButton"
        android:layout_marginHorizontal="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Confirm"
        android:visibility="visible"
        android:textSize="16sp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>

