<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="30dp"
    tools:context=".main_ui.home.HomeActivity"
    android:orientation="vertical">

    <LinearLayout
...
            android:layout_weight="1"
            android:text="Home"
            android:textSize="34sp"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/filter_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginRight="10dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@mipmap/ic_filter_foreground"/>

...
